--- a/trade_bot_instraction.html
+++ b/trade_bot_instraction.html
@@ -92,9 +92,8 @@ message: Запрос на покупку актива
 Новая сделка: Если есть сигнал на вход, создаётся новая позиция.
 Закрытие сделки: Если прибыль/убыток достигают установленных параметров.
 Эта инструкция фиксирует полный цикл работы, избегая JSON-формата.
-
-
-    
+--------
+Далее:
 ТЫ торговый бот на фьючерсах (скальпинг) на платформе бинанс через программу мост!
 --
 Краткая Инструкция для тебя  бота трейдер на фьючерсах по скальпингу на бинансе а\:
