--- a/instr-json.html
+++ b/instr-json.html
@@ -7,57 +7,91 @@
 </head>
 <body>
     <pre>
- Обязательное выполнение!
- Инструкция по обработке и отправке JSON
-Контекст работы
-Основная задача — ожидание ответа от чата и проверка JSON с определённым статусом.
-Входящий JSON должен содержать поле "status": 777, которое используется для подтверждения корректности ответа.
-JSON-ответы передаются через Selenium и обрабатываются для поиска необходимых данных.
-Правила работы
-Запуск процесса:
-
-Пользователь отправляет команду fetch_status для тестирования.
-Чат должен сформировать JSON-ответ, содержащий нужные данные, включая статус "status": 777.
-Структура JSON-ответа:
-
-json
+ Инструкция для обработки запросов и действий (без JSON-формата)
+1. Получение команды fetch_status
+Ответ:
+vbnet
 Копировать код
-{
-    "action": "fetch_status",
-    "details": [
-        "open_positions",
-        "active_orders",
-        "current_prices"
-    ],
-    "symbol": "ADAUSDT",
-    "status": 777,
-    "notes": "Requesting full status data for ADAUSDT"
-}
-Логика обработки в коде:
-
-Selenium ожидает появления JSON-ответа с полем "status": 777 в HTML-элементе с классом whitespace-pre-wrap.
-Если JSON не содержит нужный статус, процесс продолжает ожидание с интервалом проверки 5 секунд.
-Условия успешной обработки:
-
-JSON-ответ должен быть корректно сформирован, а статус 777 обязательно включён в него.
-Если статус не обнаружен в течение установленного времени (например, 30 попыток с интервалом 5 секунд), система сообщает об ошибке.
-Ошибки и отладка:
-
-Если сообщение не найдено, включается логирование всех этапов:
-Вывод каждого полученного ответа.
-Указание количества оставшихся попыток.
-Для исправления ошибок проверяйте:
-Соответствие XPath актуальной HTML-разметке.
-Корректность формата JSON, отправленного из чата.
-Действия в будущем чате
-При отправке команды fetch_status проверять:
-JSON-ответ должен содержать статус 777.
-Все данные соответствуют структуре.
-Если JSON-ответ отсутствует или некорректен, возвращать лог с ошибками.
-Перед каждым тестом уточнять, что результат будет проверен на наличие status: 777.
-
-
-  
+❋MSG❋
+messageId: 24363  
+status: ok  
+action: 8  
+data: assets: []  
+message: Запрос баланса аккаунта  
+❋END❋
+Действие: Отправить запрос на получение баланса.
+2. Ответ с балансом
+Пример ответа:
+makefile
+Копировать код
+Актив: USDT  
+Баланс на кошельке: 9.87641086  
+Нереализованная прибыль: 0.00000000  
+Маржинальный баланс: 9.87641086  
+Действие:
+Проверить баланс и нереализованную прибыль.
+Отправить запрос на информацию по активным сделкам.
+3. Запрос информации по активным сделкам
+Запрос:
+vbnet
+Копировать код
+❋MSG❋
+messageId: 24364  
+status: ok  
+action: 9  
+data: {}  
+message: Запрос информации по активным сделкам  
+❋END❋
+Действие: Ждать ответ о текущих активных сделках.
+4. Ответ с информацией о сделках
+Пример ответа:
+makefile
+Копировать код
+Активные сделки:  
+Актив: BTCUSDT  
+Цена входа: 17250.50  
+Текущая цена: 17300.00  
+Объём позиции: 0.05  
+Нереализованная прибыль: 2.475  
+Действие:
+Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
+Если рынок стабилен, продолжить мониторинг.
+Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
+5. Запрос на закрытие сделки
+Запрос:
+yaml
+Копировать код
+❋MSG❋
+messageId: 24365  
+status: ok  
+action: 10  
+data:  
+  asset: BTCUSDT  
+  positionSize: 0.05  
+message: Запрос на закрытие активной позиции  
+❋END❋
+Действие: Закрыть указанную сделку.
+6. Запрос на покупку актива
+Запрос:
+yaml
+Копировать код
+❋MSG❋
+messageId: 24366  
+status: ok  
+action: 11  
+data:  
+  asset: ETHUSDT  
+  orderType: market  
+  positionSize: 0.1  
+message: Запрос на покупку актива  
+❋END❋
+Действие: Открыть новую позицию с указанными параметрами.
+Логика принятия решений:
+Проверка баланса: Если недостаточно средств, ожидание выхода из текущих сделок.
+Активные сделки: Анализ текущей прибыли или убытков.
+Новая сделка: Если есть сигнал на вход, создаётся новая позиция.
+Закрытие сделки: Если прибыль/убыток достигают установленных параметров.
+Эта инструкция фиксирует полный цикл работы, избегая JSON-формата.
 
 
     </pre>
