--- a/instr-json.html
+++ b/instr-json.html
@@ -7,91 +7,95 @@
 </head>
 <body>
     <pre>
- Инструкция для обработки запросов и действий (без JSON-формата)
+ Инструкция для обработки запросов и действий (структурированный текст)
+
+Важно
+
+Все сообщения необходимо отправлять в псевдоформатированном текстовом виде, чтобы обеспечить корректное восприятие и обработку. Формат сообщений соответствует приведённым примерам.
+
 1. Получение команды fetch_status
-Ответ:
-vbnet
-Копировать код
-❋MSG❋
-messageId: 24363  
-status: ok  
-action: 8  
-data: assets: []  
-message: Запрос баланса аккаунта  
-❋END❋
+
+Ответ, пример:
+
+❋MSG❋{"messageId": 24363,"status": "ok","action": 8,"data": { "assets": [] },"message": "Запрос баланса аккаунта"}❋END❋
+
 Действие: Отправить запрос на получение баланса.
+
 2. Ответ с балансом
+
 Пример ответа:
-makefile
-Копировать код
-Актив: USDT  
-Баланс на кошельке: 9.87641086  
-Нереализованная прибыль: 0.00000000  
-Маржинальный баланс: 9.87641086  
+
+❋MSG❋{"asset": "USDT","walletBalance": 9.87641086,"unrealizedProfit": 0.00000000,"marginBalance": 9.87641086}❋END❋
+
 Действие:
+
 Проверить баланс и нереализованную прибыль.
+
 Отправить запрос на информацию по активным сделкам.
+
 3. Запрос информации по активным сделкам
-Запрос:
-vbnet
-Копировать код
-❋MSG❋
-messageId: 24364  
-status: ok  
-action: 9  
-data: {}  
-message: Запрос информации по активным сделкам  
-❋END❋
-Действие: Ждать ответ о текущих активных сделках.
-4. Ответ с информацией о сделках
-Пример ответа:
-makefile
-Копировать код
-Активные сделки:  
-Актив: BTCUSDT  
-Цена входа: 17250.50  
-Текущая цена: 17300.00  
-Объём позиции: 0.05  
-Нереализованная прибыль: 2.475  
+
+Запрос, пример:
+
+❋MSG❋{"messageId": 24364,"status": "ok","action": 9,"data": {},"message": "Запрос информации по активным сделкам"}❋END❋
+
 Действие:
+
+Ждать ответ о текущих активных сделках.
+
+Проанализировать полученную информацию.
+
+4. Ответ с информацией о сделках
+
+Пример ответа:
+
+❋MSG❋{"activeTrades": [{"asset": "BTCUSDT","entryPrice": 17250.50,"currentPrice": 17300.00,"positionSize": 0.05,"unrealizedProfit": 2.475}]}❋END❋
+
+Действие:
+
 Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
+
 Если рынок стабилен, продолжить мониторинг.
+
 Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
+
 5. Запрос на закрытие сделки
-Запрос:
-yaml
-Копировать код
-❋MSG❋
-messageId: 24365  
-status: ok  
-action: 10  
-data:  
-  asset: BTCUSDT  
-  positionSize: 0.05  
-message: Запрос на закрытие активной позиции  
-❋END❋
-Действие: Закрыть указанную сделку.
+
+Запрос, пример:
+
+❋MSG❋{"messageId": 24365,"status": "ok","action": 10,"data": {"asset": "BTCUSDT","positionSize": 0.05},"message": "Запрос на закрытие активной позиции"}❋END❋
+
+Действие:
+
+Закрыть указанную сделку.
+
+Обновить статус и зафиксировать результат.
+
 6. Запрос на покупку актива
-Запрос:
-yaml
-Копировать код
-❋MSG❋
-messageId: 24366  
-status: ok  
-action: 11  
-data:  
-  asset: ETHUSDT  
-  orderType: market  
-  positionSize: 0.1  
-message: Запрос на покупку актива  
-❋END❋
-Действие: Открыть новую позицию с указанными параметрами.
-Логика принятия решений:
+
+Запрос, пример:
+
+❋MSG❋{"messageId": 24366,"status": "ok","action": 11,"data": {"asset": "ETHUSDT","orderType": "market","positionSize": 0.1},"message": "Запрос на покупку актива"}❋END❋
+
+Действие:
+
+Открыть новую позицию с указанными параметрами.
+
+Обновить статус и начать мониторинг позиции.
+
+Логика принятия решений (по шагам)
+
 Проверка баланса: Если недостаточно средств, ожидание выхода из текущих сделок.
-Активные сделки: Анализ текущей прибыли или убытков.
+
+Анализ активных сделок: Проверить текущую прибыль или убытки.
+
+Закрытие сделки: Если прибыль/убыток достигают установленных параметров, отправить запрос на закрытие.
+
 Новая сделка: Если есть сигнал на вход, создаётся новая позиция.
-Закрытие сделки: Если прибыль/убыток достигают установленных параметров.
-Эта инструкция фиксирует полный цикл работы, избегая JSON-формата.
+
+Мониторинг: Отслеживать открытые позиции, фиксировать результаты и корректировать действия по необходимости.
+
+Эта инструкция фиксирует полный цикл работы с использованием структурированного текста для передачи запросов и ответов.
 
 
     </pre>
