--- a/instr-json.html
+++ b/instr-json.html
@@ -7,95 +7,147 @@
 </head>
 <body>
     <pre>
- Инструкция для обработки запросов и действий (структурированный текст)
+  ### Инструкция для обработки запросов и действий (структурированный текст)
 
-Важно
-
+#### Важно
 Все сообщения необходимо отправлять в псевдоформатированном текстовом виде, чтобы обеспечить корректное восприятие и обработку. Формат сообщений соответствует приведённым примерам.
 
-1. Получение команды fetch_status
+#### Автоматизация
+Эта инструкция предназначена для автоматического выполнения роботом. Все шаги описаны так, чтобы робот мог следовать им последовательно, начиная с получения команды и заканчивая выполнением соответствующих действий.
 
-Ответ, пример:
+#### 1. Получение команды `fetch_status`
+**Ответ:**
 
-❋MSG❋{"messageId": 24363,"status": "ok","action": 8,"data": { "assets": [] },"message": "Запрос баланса аккаунта"}❋END❋
+❋MSG❋  
+{  
+"messageId": 24363,  
+"status": "ok",  
+"action": 8,  
+"data": { "assets": [] },  
+"message": "Запрос баланса аккаунта"  
+}  
+❋END❋
 
-Действие: Отправить запрос на получение баланса.
+**Действие:** Отправить запрос на получение баланса.
 
-2. Ответ с балансом
+---
 
-Пример ответа:
+#### 2. Ответ с балансом
+**Пример ответа:**
 
-❋MSG❋{"asset": "USDT","walletBalance": 9.87641086,"unrealizedProfit": 0.00000000,"marginBalance": 9.87641086}❋END❋
+❋MSG❋  
+{  
+"asset": "USDT",  
+"walletBalance": 9.87641086,  
+"unrealizedProfit": 0.00000000,  
+"marginBalance": 9.87641086  
+}  
+❋END❋
 
-Действие:
+**Действие:**
+1. Проверить баланс и нереализованную прибыль.
+2. Отправить запрос на информацию по активным сделкам.
 
-Проверить баланс и нереализованную прибыль.
+---
 
-Отправить запрос на информацию по активным сделкам.
+#### 3. Запрос информации по активным сделкам
+**Запрос:**
 
-3. Запрос информации по активным сделкам
+❋MSG❋  
+{  
+"messageId": 24364,  
+"status": "ok",  
+"action": 9,  
+"data": {},  
+"message": "Запрос информации по активным сделкам"  
+}  
+❋END❋
 
-Запрос, пример:
+**Действие:**
+1. Ждать ответ о текущих активных сделках.
+2. Проанализировать полученную информацию.
 
-❋MSG❋{"messageId": 24364,"status": "ok","action": 9,"data": {},"message": "Запрос информации по активным сделкам"}❋END❋
+---
 
-Действие:
+#### 4. Ответ с информацией о сделках
+**Пример ответа:**
 
-Ждать ответ о текущих активных сделках.
+❋MSG❋  
+{  
+"activeTrades": [  
+  {  
+    "asset": "BTCUSDT",  
+    "entryPrice": 17250.50,  
+    "currentPrice": 17300.00,  
+    "positionSize": 0.05,  
+    "unrealizedProfit": 2.475  
+  }  
+]  
+}  
+❋END❋
 
-Проанализировать полученную информацию.
+**Действие:**
+1. Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
+2. Если рынок стабилен, продолжить мониторинг.
+3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
 
-4. Ответ с информацией о сделках
+---
 
-Пример ответа:
+#### 5. Запрос на закрытие сделки
+**Запрос:**
 
-❋MSG❋{"activeTrades": [{"asset": "BTCUSDT","entryPrice": 17250.50,"currentPrice": 17300.00,"positionSize": 0.05,"unrealizedProfit": 2.475}]}❋END❋
+❋MSG❋  
+{  
+"messageId": 24365,  
+"status": "ok",  
+"action": 10,  
+"data": {  
+  "asset": "BTCUSDT",  
+  "positionSize": 0.05  
+},  
+"message": "Запрос на закрытие активной позиции"  
+}  
+❋END❋
 
-Действие:
+**Действие:**
+1. Закрыть указанную сделку.
+2. Обновить статус и зафиксировать результат.
 
-Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
+---
 
-Если рынок стабилен, продолжить мониторинг.
+#### 6. Запрос на покупку актива
+**Запрос:**
 
-Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
+❋MSG❋  
+{  
+"messageId": 24366,  
+"status": "ok",  
+"action": 11,  
+"data": {  
+  "asset": "ETHUSDT",  
+  "orderType": "market",  
+  "positionSize": 0.1  
+},  
+"message": "Запрос на покупку актива"  
+}  
+❋END❋
 
-5. Запрос на закрытие сделки
+**Действие:**
+1. Открыть новую позицию с указанными параметрами.
+2. Обновить статус и начать мониторинг позиции.
 
-Запрос, пример:
+---
 
-❋MSG❋{"messageId": 24365,"status": "ok","action": 10,"data": {"asset": "BTCUSDT","positionSize": 0.05},"message": "Запрос на закрытие активной позиции"}❋END❋
+### Логика принятия решений (по шагам)
+1. **Проверка баланса:** Если недостаточно средств, ожидание выхода из текущих сделок.
+2. **Анализ активных сделок:** Проверить текущую прибыль или убытки.
+3. **Закрытие сделки:** Если прибыль/убыток достигают установленных параметров, отправить запрос на закрытие.
+4. **Новая сделка:** Если есть сигнал на вход, создаётся новая позиция.
+5. **Мониторинг:** Отслеживать открытые позиции, фиксировать результаты и корректировать действия по необходимости.
 
-Действие:
+Эта инструкция фиксирует полный цикл работы с использованием структурированного текста для передачи запросов и ответов. Все шаги автоматизированы для выполнения роботом.
 
-Закрыть указанную сделку.
 
-Обновить статус и зафиксировать результат.
-
-6. Запрос на покупку актива
-
-Запрос, пример:
-
-❋MSG❋{"messageId": 24366,"status": "ok","action": 11,"data": {"asset": "ETHUSDT","orderType": "market","positionSize": 0.1},"message": "Запрос на покупку актива"}❋END❋
-
-Действие:
-
-Открыть новую позицию с указанными параметрами.
-
-Обновить статус и начать мониторинг позиции.
-
-Логика принятия решений (по шагам)
-
-Проверка баланса: Если недостаточно средств, ожидание выхода из текущих сделок.
-
-Анализ активных сделок: Проверить текущую прибыль или убытки.
-
-Закрытие сделки: Если прибыль/убыток достигают установленных параметров, отправить запрос на закрытие.
-
-Новая сделка: Если есть сигнал на вход, создаётся новая позиция.
-
-Мониторинг: Отслеживать открытые позиции, фиксировать результаты и корректировать действия по необходимости.
-
-Эта инструкция фиксирует полный цикл работы с использованием структурированного текста для передачи запросов и ответов.
 
 
     </pre>
