--- a/instr-json.html
+++ b/instr-json.html
@@ -7,13 +7,28 @@
 </head>
 <body>
     <pre>
-  ### Инструкция для обработки запросов и действий (структурированный текст)
-
+ ### Инструкция для обработки запросов и действий (структурированный текст)
+Инструкция для тестов, выполнить по шагам!! 
 #### Важно
 Все сообщения необходимо отправлять в псевдоформатированном текстовом виде, чтобы обеспечить корректное восприятие и обработку. Формат сообщений соответствует приведённым примерам.
 
-#### Автоматизация
-Эта инструкция предназначена для автоматического выполнения роботом. Все шаги описаны так, чтобы робот мог следовать им последовательно, начиная с получения команды и заканчивая выполнением соответствующих действий.
+#### Новые типы действий (Action):
+
+```csharp
+namespace TradingBridgeSelenium.Enums
+{
+    public enum BinanceOperationTypeEnum
+    {
+        None = 0,       // Ожидание (await)
+        GetPrice = 4,   // Получение текущей цены инструмента
+        PlaceMarketOrder = 5,  // Размещение рыночного ордера (покупка/продажа)
+        GetAccountBalance = 8, // Получение информации о балансе аккаунта 
+        GetPositionInfo = 10,  // Получение информации о текущих позициях
+        ClosePosition = 11,    // Закрытие позиции 
+    }
+}
+```
+      
 
 #### 1. Получение команды `fetch_status`
 **Ответ:**
@@ -24,15 +39,15 @@
 "status": "ok",  
 "action": 8,  
 "data": { "assets": [] },  
-"message": "Запрос баланса аккаунта"  
+"message": "Проверка состояния моста"  
 }  
 ❋END❋
 
-**Действие:** Отправить запрос на получение баланса.
+**Действие:** Отправить запрос на проверку состояния моста.
 
 ---
 
-#### 2. Ответ с балансом
+#### 2. Получение баланса
 **Пример ответа:**
 
 ❋MSG❋  
@@ -92,6 +107,28 @@
 3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
 
 ---
+#### 6. Запрос на покупку актива
+**Запрос:**
+
+❋MSG❋  
+{  
+"messageId": 24366,  
+"status": "ok",  
+"action": 5,  
+"data": {  
+  "asset": "ETHUSDT",  
+  "orderType": "market",  
+  "positionSize": 0.1  
+},  
+"message": "Запрос на покупку актива"  
+}  
+❋END❋
+
+**Действие:**
+1. Открыть новую позицию с указанными параметрами.
+2. Обновить статус и начать мониторинг позиции.
+---
+
 
 #### 5. Запрос на закрытие сделки
 **Запрос:**
@@ -100,7 +137,7 @@
 {  
 "messageId": 24365,  
 "status": "ok",  
-"action": 10,  
+"action": 11,  
 "data": {  
   "asset": "BTCUSDT",  
   "positionSize": 0.05  
@@ -115,26 +152,7 @@
 
 ---
 
-#### 6. Запрос на покупку актива
-**Запрос:**
 
-❋MSG❋  
-{  
-"messageId": 24366,  
-"status": "ok",  
-"action": 11,  
-"data": {  
-  "asset": "ETHUSDT",  
-  "orderType": "market",  
-  "positionSize": 0.1  
-},  
-"message": "Запрос на покупку актива"  
-}  
-❋END❋
-
-**Действие:**
-1. Открыть новую позицию с указанными параметрами.
-2. Обновить статус и начать мониторинг позиции.
 
 ---
 
@@ -146,8 +164,7 @@
 5. **Мониторинг:** Отслеживать открытые позиции, фиксировать результаты и корректировать действия по необходимости.
 
 Эта инструкция фиксирует полный цикл работы с использованием структурированного текста для передачи запросов и ответов. Все шаги автоматизированы для выполнения роботом.
-
-
+          
 
 
     </pre>
