--- a/test_json.html
+++ b/test_json.html
@@ -8,7 +8,8 @@
 <body>
     <pre>
 ### Инструкция для обработки запросов и действий (структурированный текст)
-Инструкция для тестов!
+Инструкция для тестов! 
+Выполнить все по шагам!
 #### Важно
 Все сообщения необходимо отправлять в псевдоформатированном текстовом виде, чтобы обеспечить корректное восприятие и обработку. Формат сообщений соответствует приведённым примерам.
 
@@ -24,8 +25,7 @@ namespace TradingBridgeSelenium.Enums
         PlaceMarketOrder = 5,  // Размещение рыночного ордера (покупка/продажа)
         GetAccountBalance = 8, // Получение информации о балансе аккаунта 
         GetPositionInfo = 10,  // Получение информации о текущих позициях
-        ClosePosition = 11,    // Закрытие позиции
-        FetchStatus = 12,      // Проверка состояния моста
+        ClosePosition = 11,    // Закрытие позиции 
     }
 }
 ```
@@ -38,7 +38,7 @@ namespace TradingBridgeSelenium.Enums
 {  
 "messageId": 24363,  
 "status": "ok",  
-"action": 12,  
+"action": 8,  
 "data": { "assets": [] },  
 "message": "Проверка состояния моста"  
 }  
@@ -106,29 +106,6 @@ namespace TradingBridgeSelenium.Enums
 1. Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
 2. Если рынок стабилен, продолжить мониторинг.
 3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
-
----
-
-#### 5. Запрос на закрытие сделки
-**Запрос:**
-
-❋MSG❋  
-{  
-"messageId": 24365,  
-"status": "ok",  
-"action": 11,  
-"data": {  
-  "asset": "BTCUSDT",  
-  "positionSize": 0.05  
-},  
-"message": "Запрос на закрытие активной позиции"  
-}  
-❋END❋
-
-**Действие:**
-1. Закрыть указанную сделку.
-2. Обновить статус и зафиксировать результат.
-
 ---
 
 #### 6. Запрос на покупку актива
@@ -140,7 +117,7 @@ namespace TradingBridgeSelenium.Enums
 "status": "ok",  
 "action": 5,  
 "data": {  
-  "asset": "ETHUSDT",  
+  "asset": "ADAUSDT",  
   "orderType": "market",  
   "positionSize": 0.1  
 },  
@@ -154,6 +131,29 @@ namespace TradingBridgeSelenium.Enums
 
 ---
 
+#### 5. Запрос на закрытие сделки
+**Запрос:**
+
+❋MSG❋  
+{  
+"messageId": 24365,  
+"status": "ok",  
+"action": 11,  
+"data": {  
+  "asset": "ADAUSDT",  
+  "positionSize": 0.05  
+},  
+"message": "Запрос на закрытие активной позиции"  
+}  
+❋END❋
+
+**Действие:**
+1. Закрыть указанную сделку.
+2. Обновить статус и зафиксировать результат.
+
+---
+ 
+
 ### Логика принятия решений (по шагам)
 1. **Проверка баланса:** Если недостаточно средств, ожидание выхода из текущих сделок.
 2. **Анализ активных сделок:** Проверить текущую прибыль или убытки.
@@ -162,6 +162,9 @@ namespace TradingBridgeSelenium.Enums
 5. **Мониторинг:** Отслеживать открытые позиции, фиксировать результаты и корректировать действия по необходимости.
 
 Эта инструкция фиксирует полный цикл работы с использованием структурированного текста для передачи запросов и ответов. Все шаги автоматизированы для выполнения роботом.
+          
+ 
+
           </pre>
 </body>
 </html>
