--- a/test_json.html
+++ b/test_json.html
@@ -10,6 +10,7 @@
 ### Инструкция для обработки запросов и действий (структурированный текст)
 Инструкция для тестов! 
 Выполнить все по шагам!
+Бюджет всего 10$, пока покупать монету ADAUSDT.
 #### Важно
 Все сообщения необходимо отправлять в псевдоформатированном текстовом виде, чтобы обеспечить корректное восприятие и обработку. Формат сообщений соответствует приведённым примерам.
 
@@ -128,6 +129,7 @@ namespace TradingBridgeSelenium.Enums
 **Действие:**
 1. Открыть новую позицию с указанными параметрами.
 2. Обновить статус и начать мониторинг позиции.
+3. пока покупать ADAUSDT (помнить что у нас бюджет 10$)
 
 ---
 
