--- a/test_json.html
+++ b/test_json.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <pre>
-### Инструкция для обработки запросов и действий (структурированный текст)
+### Инструкция для обработки запросов и действий (структурированный текст) для торгового бота тредйера на фьючерсах по принцыпу скальпинга на платформе бинанс.
 Инструкция для тестов! 
 Выполнить все по шагам!
 Бюджет всего 10$, пока покупать монету ADAUSDT.
