--- a/test_json.html
+++ b/test_json.html
@@ -23,7 +23,7 @@ namespace TradingBridgeSelenium.Enums
     {
         None = 0,       // Ожидание (await)
         GetPrice = 4,   // Получение текущей цены инструмента
-        PlaceMarketOrder = 5,  // Размещение рыночного ордера (покупка/продажа)
+        PlaceMarketOrder = 5,  // Размещение рыночного ордера (покупка/продажа/SHORT)
         GetAccountBalance = 8, // Получение информации о балансе аккаунта 
         GetPositionInfo = 10,  // Получение информации о текущих позициях
         ClosePosition = 11,    // Закрытие позиции 
@@ -32,7 +32,7 @@ namespace TradingBridgeSelenium.Enums
 ```
       
 
-#### 1. Получение команды `fetch_status`
+#### Пункт 1. Получение команды `fetch_status`
 **Ответ:**
 
 ❋MSG❋  
@@ -49,7 +49,7 @@ namespace TradingBridgeSelenium.Enums
 
 ---
 
-#### 2. Получение баланса
+#### Пункт 2. Получение баланса
 **Пример ответа:**
 
 ❋MSG❋  
@@ -67,7 +67,7 @@ namespace TradingBridgeSelenium.Enums
 
 ---
 
-#### 3. Запрос информации по активным сделкам
+#### Пункт 3. Запрос информации по активным сделкам
 **Запрос:**
 
 ❋MSG❋  
@@ -86,7 +86,7 @@ namespace TradingBridgeSelenium.Enums
 
 ---
 
-#### 4. Ответ с информацией о сделках
+#### Пункт 4. Ответ с информацией о сделках
 **Пример ответа:**
 
 ❋MSG❋  
@@ -104,12 +104,28 @@ namespace TradingBridgeSelenium.Enums
 ❋END❋
 
 **Действие:**
+0.Пока для проверки покупаем ADAUSDT . быланс 10$ -работаем с етим балансом
 1. Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
 2. Если рынок стабилен, продолжить мониторинг.
-3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку.
+3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку. Таже SHORT
+3.1 Есели после проверки пока нечего покупать то прислать статус NON
+4. если сейчас не выгодная ситация то не покупать. Использовтаь все правила трединга на фьючерсах и скальпинге также весь свой опыт накопленный по тредингу на фьчерсах.
+5. ждать и анализировать в реалном времени в том числе и с открытых источников удобного момента дял покупки, использовать наокпленный опыт по тредингу.
+ 
+---
+#### Пункт 5. Ожидаем пока нечего  поупать. Для проверки пирслать NON один раз
+❋MSG❋  
+{  
+"messageId": 24363,  
+"status": "ok",  
+"action": 0,  
+"data": { "assets": [] },  
+"message": "Проверка состояния моста"  
+}  
+❋END❋
 ---
 
-#### 6. Запрос на покупку актива
+#### Пункт 6. Запрос на покупку актива (если необходмо)
 **Запрос:**
 
 ❋MSG❋  
@@ -133,7 +149,31 @@ namespace TradingBridgeSelenium.Enums
 
 ---
 
-#### 5. Запрос на закрытие сделки
+#### Пункт 6.1 Запрос на SHORT актива (если необходмо)
+**Запрос:**
+
+❋MSG❋  
+{  
+"messageId": 24366,  
+"status": "ok",  
+"action": 5,  
+"data": {  
+  "asset": "ADAUSDT",  
+  "orderType": "market",  
+  "positionSize": 0.1  
+},  
+"message": "Запрос на покупку актива"  
+}  
+❋END❋
+
+**Действие:**
+1. Открыть новую позицию с указанными параметрами.
+2. Обновить статус и начать мониторинг позиции.
+3. пока покупать ADAUSDT (помнить что у нас бюджет 10$)
+
+---
+---
+#### Пункт 5. Запрос на закрытие сделки, также тут шорт можно ставить
 **Запрос:**
 
 ❋MSG❋  
