--- a/test_json.html
+++ b/test_json.html
@@ -107,8 +107,10 @@ namespace TradingBridgeSelenium.Enums
 0.Пока для проверки покупаем ADAUSDT . быланс 10$ -работаем с етим балансом
 1. Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
 2. Если рынок стабилен, продолжить мониторинг.
-3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку. Таже SHORT
-3.1 Есели после проверки пока нечего покупать то прислать статус NON
+3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку. Торговый бот сам расчитывает колчисечтво мнет исходя из 5$ баланса. и сам подставляет знаечние в : "positionSize":
+      
+3.1        Таже SHORT
+3.2 Есели после проверки пока нечего покупать то прислать статус NON
 4. если сейчас не выгодная ситация то не покупать. Использовтаь все правила трединга на фьючерсах и скальпинге также весь свой опыт накопленный по тредингу на фьчерсах.
 5. ждать и анализировать в реалном времени в том числе и с открытых источников удобного момента дял покупки, использовать наокпленный опыт по тредингу.
  
@@ -136,7 +138,7 @@ namespace TradingBridgeSelenium.Enums
 "data": {  
   "asset": "ADAUSDT",  
   "orderType": "market",  
-  "positionSize": 0.1  
+  "positionSize":  
 },  
 "message": "Запрос на покупку актива"  
 }  
