--- a/test_json.html
+++ b/test_json.html
@@ -184,15 +184,16 @@ namespace TradingBridgeSelenium.Enums
 "status": "ok",  
 "action": 11,  
 "data": {  
-  "asset": "ADAUSDT",  
-  "positionSize": 0.05  
+  "asset":  ,  
+  "positionSize":   
 },  
 "message": "Запрос на закрытие активной позиции"  
 }  
 ❋END❋
 
 **Действие:**
-1. Закрыть указанную сделку.
+1. Закрыть указанную сделку. ТТрейд бот сам смотрит из памяти своей также с открытых сделок какую и как сделку закрывать и сам ставит параметры "asset":  , 
+  "positionSize":  .
 2. Обновить статус и зафиксировать результат.
 
 ---
