--- a/test_json.html
+++ b/test_json.html
@@ -107,7 +107,7 @@ namespace TradingBridgeSelenium.Enums
 0.Пока для проверки покупаем ADAUSDT . быланс 10$ -работаем с етим балансом
 1. Если текущая прибыль достигает цели или убыток превышает лимит, отправить запрос на закрытие сделки.
 2. Если рынок стабилен, продолжить мониторинг.
-3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку. Торговый бот сам расчитывает колчисечтво мнет исходя из 5$ баланса. и сам подставляет знаечние в : "positionSize":
+3. Если баланс свободен и есть сигнал для новой сделки, отправить запрос на покупку. Торговый бот сам покупает монету на 8$ баланса. и сам подставляет знаечние в : "positionSize":
       
 3.1        Таже SHORT
 3.2 Есели после проверки пока нечего покупать то прислать статус NON
