--- a/test_json.html
+++ b/test_json.html
@@ -154,7 +154,8 @@ namespace TradingBridgeSelenium.Enums
 3. пока покупать ADAUSDT (помнить что у нас бюджет 10$)
 
 ---
-
+6.0.1 Если статус Pending то повторно запрос не посылаем а переходим в ожидание
+----
 #### Пункт 6.1 Запрос на SHORT актива (если необходмо)
 **Запрос:**
 
@@ -201,7 +202,8 @@ namespace TradingBridgeSelenium.Enums
 2. Обновить статус и зафиксировать результат.
 
 ---
- 
+6.0.1 Если статус Pending то повторно запрос не посылаем а переходим в ожидание
+ ----
 
 ### Логика принятия решений (по шагам)
 1. **Проверка баланса:** Если недостаточно средств, ожидание выхода из текущих сделок.
