--- a/test_json.html
+++ b/test_json.html
@@ -154,7 +154,7 @@ namespace TradingBridgeSelenium.Enums
 3. пока покупать ADAUSDT (помнить что у нас бюджет 10$)
 
 ---
-6.0.1 Если статус Pending то повторно запрос не посылаем а переходим в ожидание
+6.0.1 Если статус Pending то означает ошибку и повторный запрос команды не нужен, а нужно переходить к началу инструкции .
 ----
 #### Пункт 6.1 Запрос на SHORT актива (если необходмо)
 **Запрос:**
